# page-turner

./: .gitignore  README.md
client/web/page-turner/: package-lock.json  package.json  tailwind.config.ts
client/web/page-turner/src/app/: layout.tsx  page.tsx
client/web/page-turner/src/components/: Navbar.tsx  OAuthLoginButton.tsx
client/web/page-turner/src/pages/dashboard/: index.tsx
client/web/page-turner/src/utils/: auth.ts
server/: Cargo.toml
server/config/sql/: book_status_schema.sql  books_schema.sql  user_book_list_schema.sql  user_schema.sql
server/src/: main.rs
server/src/models/: mod.rs
server/src/models/book/: mod.rs
server/src/models/book_status/: mod.rs
server/src/models/user/: mod.rs
server/src/models/user_book_list/: mod.rs
server/src/routes/: mod.rs
server/src/routes/auth/: handlers.rs  mod.rs
server/src/routes/books/: handlers.rs  mod.rs
server/src/routes/user_book_list/: handlers.rs  mod.rs
server/src/routes/users/: mod.rs
server/src/utils/: mod.rs
server/src/utils/appstate/: mod.rs
server/src/utils/authmiddleware/: mod.rs
