[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-std = { version = "1.6.2", features = ["attributes", "tokio02"] }
tide = "0.16" 
oauth2 = "4.4.2"
sqlx = { version = "0.8", features = ["runtime-async-std-native-tls", "postgres", "uuid", "macros"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
surf = { version = "2.0.0-alpha.4", default-features = false, features = ["h1-client"] }
failure = "0.1.8"
futures = "0.3.5"
tokio = { version = "1", features = ["full"] }
url = "2.2"
serde_urlencoded = "0.7"

[[bin]]
name = "rust_app"
path = "src/main.rs"